# simple-pong-bevy

./: .gitignore  Cargo.toml  LICENSE_AUDIO.txt  LICENSE_SAMPLE.txt  README.md
src/: audio.rs  game.rs  main.rs
src/systems/: bounce.rs  mod.rs  move_balls.rs  paddle.rs  winner.rs
src/utils/: camera.rs  mod.rs
